correzione errori, animazione parzialmente funzionante

--- a/index-it.html
+++ b/index-it.html
@@ -14,11 +14,11 @@
 			<section class="col-xs-6" id="portfolio">
 				<div class="color row white">
 					<div class="box text-center">
-						<a class="page-call" href="#"><h2 class="hvr-bob">My Name is Hachi</h2></a>
+						<a class="page-call" href="#one"><h2 class="hvr-bob">My Name is Hachi</h2></a>
 					</div>
 				</div>
 			</section>
-			<div class="page one">
+			<div class="page" id="one">
 						<div class="row">
 							<div class="col-xs-12">
 								<a href=""><i class="fa fa-times pull-right"></i></a>
@@ -35,7 +35,7 @@
 						<a href=""><h2 class="hvr-bob">My work as Web Designer</h2></a>
 					</div>
 			</section>
-			<div class="page two">
+			<div class="">
 						<div class="row">
 							<div class="col-xs-12">
 								<i class="fa fa-times pull-right"></i>
