due pagine dinamiche aggiunte, correzioni nel codice

--- a/index-it.html
+++ b/index-it.html
@@ -13,80 +13,52 @@
 		<div class="row">
 			<section class="col-xs-6" id="portfolio">
 				<div class="color row white">
-					<div class="box text-center">
-						<a class="page-call" href="#one"><h2 class="hvr-bob">My Name is Hachi</h2></a>
-					</div>
-				</div>
+					<a href="#one" class="page-call">
+						<div class="box hvr-bob">
+							<h2>My Name is Hachi</h2>
+					   </div>
+					</a>  
+			   </div>
 			</section>
-			<div class="page" id="one">
-						<div class="row">
-							<div class="col-xs-12">
-								<a href=""><i class="fa fa-times pull-right"></i></a>
-								<h2></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nisi minima enim perspiciatis expedita beatae earum deleniti aperiam vel. Ex harum quod, dolorem hic illum sit unde fuga iste velit.</p>
-								<p></p>
-								<p></p>
-							</div>
-						</div>
-			</div>
+			<div id="portfoliopage"></div>
 			<section class="col-xs-6" id="web-design">
 				<div class="color row red">
-					<div class="box text-center">
-						<a href=""><h2 class="hvr-bob">My work as Web Designer</h2></a>
-					</div>
-			</section>
-			<div class="">
-						<div class="row">
-							<div class="col-xs-12">
-								<i class="fa fa-times pull-right"></i>
-								<h2></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptates temporibus deleniti, excepturi vitae doloremque ipsam beatae alias aliquam ad error pariatur sapiente fugit optio iure fugiat id expedita saepe.</p>
-								<p></p>
-								<p></p>
-							</div>
+					<a href="#two" class="page-call">
+						<div class="box hvr-bob">
+							<h2>My work as Web Designer</h2>
 						</div>
-					</div>
-				</div>
-		</div>
+					</a>
+			</section>
+            <div id="webworkspage"></div>
 		<div class="row">
 			<section class="col-xs-6" id="illustrations">
 				<div class="color row blue">
-					<div class="box text-center">
-						<h2 class="hvr-bob"><a href="">When I close my eyes</a></h2>
-					</div>
-					<div class="">
-						<div class="row">
+					<div class="box hvr-bob">
+					    <h2>When I close my eyes</h2>
+					    <div class="page row" id="one">
 							<div class="col-xs-12">
-								<i class="fa fa-times pull-right"></i>
-								<h2></h2>
-								<p></p>
-								<p></p>
-								<p></p>
-							</div>
-						</div>
+								<div class="row">
+									<div class="col-sm-10 col-sm-offset-1">
+										<a href=""><i class="fa fa-times fa-2x pull-right"></i></a>
+										<h2></h2>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nisi minima enim perspiciatis expedita beatae earum deleniti aperiam vel. Ex harum quod, dolorem hic illum sit unde fuga iste velit.</p>
+										<p></p>
+										<p></p>
+								    </div>
+								</div>
+						   </div>
+		        	   </div>
 					</div>
-				
 				</div>
 			</section>
 			<section class="col-xs-6" id="contacts">
 				<div class="color row green">
-					<div class="box text-center">
-						<h2 class="hvr-bob"><a href="">Contact Me</a></h2>
-					</div>
-					<div class="">
-						<div class="row">
-							<div class="col-xs-12">
-								<i class="fa fa-times pull-right"></i>
-								<h2></h2>
-								<p></p>
-								<p></p>
-								<p></p>
-							</div>
-						</div>
+					<div class="box hvr-bob">
+						<h2><a href="">Contact Me</a></h2>
 					</div>
 				</div>
 			</section>
-		</div>
+	    </div>			
 	</div>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
