base del sito completata, animazioni funzionanti in tutti e quattro gli elementi

--- a/index-it.html
+++ b/index-it.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row">
+		<div class="row awesome-bg">
 			<section class="col-xs-6" id="portfolio">
 				<div class="color row white">
-					<a href="#one" class="page-call">
+					<a href="#one" class="page-one">
 						<div class="box hvr-bob">
 							<h2>My Name is Hachi</h2>
 					   </div>
@@ -23,7 +23,7 @@
 			<div id="portfoliopage"></div>
 			<section class="col-xs-6" id="web-design">
 				<div class="color row red">
-					<a href="#two" class="page-call">
+					<a href="#two" class="page-two">
 						<div class="box hvr-bob">
 							<h2>My work as Web Designer</h2>
 						</div>
@@ -33,31 +33,24 @@
 		<div class="row">
 			<section class="col-xs-6" id="illustrations">
 				<div class="color row blue">
-					<div class="box hvr-bob">
-					    <h2>When I close my eyes</h2>
-					    <div class="page row" id="one">
-							<div class="col-xs-12">
-								<div class="row">
-									<div class="col-sm-10 col-sm-offset-1">
-										<a href=""><i class="fa fa-times fa-2x pull-right"></i></a>
-										<h2></h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nisi minima enim perspiciatis expedita beatae earum deleniti aperiam vel. Ex harum quod, dolorem hic illum sit unde fuga iste velit.</p>
-										<p></p>
-										<p></p>
-								    </div>
-								</div>
-						   </div>
-		        	   </div>
-					</div>
+					<a href="#three" class="page-three">
+						<div class="box hvr-bob">
+						    <h2>When I close my eyes</h2>
+						</div>
+					</a>
 				</div>
 			</section>
+			<div id="artworkpage"></div>
 			<section class="col-xs-6" id="contacts">
 				<div class="color row green">
-					<div class="box hvr-bob">
-						<h2><a href="">Contact Me</a></h2>
-					</div>
+					<a href="#four" class="page-four">	
+						<div class="box hvr-bob">
+							<h2>Contact Me</h2>
+						</div>
+					</a>
 				</div>
 			</section>
+			<div id="contactpage"></div>
 	    </div>			
 	</div>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
