--- a/index-it.html
+++ b/index-it.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.0.2/css/hover-min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row awesome-bg">
+		<div class="row">
 			<section class="col-xs-6" id="portfolio">
 				<div class="color row white">
 					<a href="#one" class="page-one">
