--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,77 @@
 		<div class="col-xs-12">
 			<div class="row">
 				<div class="col-sm-10 col-sm-offset-1">
-				    <p><a href="" class="fa fa-times fa-2x pull-right"></a></p>
-					<h2></h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nisi minima enim perspiciatis expedita beatae earum deleniti aperiam vel. Ex harum quod, dolorem hic illum sit unde fuga iste velit.</p>
-					<p></p>
-					<p></p>
+				    <p><a href="" class="fa fa-times fa-2x close"></a></p>	
+				    <div class="row">
+				    	<div class="col-xs-12 col-sm-4 col-md-3 mt20">
+				    			<img src="css/img/andrea.jpg" alt="" class="img-responsive img-circle">
+				    	</div>
+				    	<div class="col-xs-12 col-sm-8 col-md-9">
+							<h1>Qualche informazione su di me</h1>
+							<h4>Sono uno studente borsista laureando all’Accademia di Belle Arti di Torino. 
+	        				  Faccio il web designer, l’illustratore sia digitale (Photoshop, Krita) che con tecniche tradizionali (olio, acquarello, acrilico, matita).</h4>
+					          <h4>
+					          Come web designer mi sto specializzando nell’apprendere 
+					          linguaggi di programmazione front-end (html, css, js).
+				            </h4>
+			    		</div>
+			        </div>   
+					<div class="skill mb20">
+						<h1 class="">My Skylls</h1>
+						<div class="progress">
+								 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+						    html/css:90%
+						    </div>
+						</div>
+						<div class="progress progress-striped ">
+								 <div class="progress-bar progress-bar-success active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+						    Web Design:80%
+						    </div>
+						</div>
+						<div class="progress progress-striped">
+								 <div class="progress-bar progress-bar-success active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+						    Digital Painting:80%
+						    </div>
+						</div>
+						<div class="progress">
+								 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+						    Photography:75%
+						    </div>
+                        </div>
+						<div class="progress progress-striped">
+								 <div class="progress-bar progress-bar-warning active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"> 
+						    Digital Sculpting:40%
+						   </div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-3 text-center">
+							<i class="fa fa-2x  fa-paw"></i>
+							  <h3>Shiba From Mars e Hachi</h3>
+							  <div class="pd30">
+							  	<p>
+								<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla explicabo neque accusamus repellendus accusantium optio ad, alias corrupti adipisci velit repudiandae fugiat porro labore autem cupiditate similique architecto eaque, nostrum.</span><span>Ab in, fugiat saepe asperiores magni repellendus omnis mollitia ratione similique aperiam nobis, ullam tempore earum ipsa deserunt reiciendis officia alias, provident quos error quia laboriosam. Expedita animi doloribus architecto!</span>
+							</p></div>
+						</div>
+						<div class="col-md-3 text-center">
+							<i class="fa fa-2x  fa-heart"></i>
+							<h3>What I love</h3>
+							<div class="pd30"><p>
+								<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla explicabo neque accusamus repellendus accusantium optio ad, alias corrupti adipisci velit repudiandae fugiat porro labore autem cupiditate similique architecto eaque, nostrum.</span><span>Ab in, fugiat saepe asperiores magni repellendus omnis mollitia ratione similique aperiam nobis, ullam tempore earum ipsa deserunt reiciendis officia alias, provident quos error quia laboriosam. Expedita animi doloribus architecto!</span>
+							</p></div>
+						</div>
+						<div class="col-md-3 text-center">	
+							<i class="fa fa-2x  fa-lightbulb-o"></i>
+							<h3>The power of the Ideas</h3>
+							<div class="pd30"></div>
+						</div>
+						<div class="col-md-3 text-center">
+							<i class="fa fa-2x  fa-rocket"></i>
+							<h3>let's enjoy this spacetrip together</h3>
+							<div class="pd30"></div>
+						</div>
+					</div>
+				
 			    </div>
 			</div>
 	   </div>
