--- a/artwork.html
+++ b/artwork.html
@@ -1,13 +1,44 @@
- 						<div class="page content row" id="three">
-							<div class="col-xs-12">
-								<div class="row">
-									<div class="col-sm-10 col-sm-offset-1">
-										<p><a href="" class="fa fa-times fa-2x pull-right"></a></p>
-										<h2></h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nisi minima enim perspiciatis expedita beatae earum deleniti aperiam vel. Ex harum quod, dolorem hic illum sit unde fuga iste velit.</p>
-										<p></p>
-										<p></p>
-								    </div>
-								</div>
-						   </div>
-		        	   </div>
+<div class="page content row box" id="three">
+	<div class="col-xs-12">
+		<div class="row awesome-txt">
+			<div class="col-sm-10 col-sm-offset-1">	
+				<p><a href="" class="fa fa-times fa-2x close"></a></p>	
+					<div class="row">
+						 <div class="col-xs-12">
+							<a href="#art-gal" class="hvr-bob page-art">
+								<h1>DIGITAL ART</h1>
+							</a>
+						 </div>
+						 <div class="col-xs-12">
+							<a href="#photo-gal" class="hvr-bob page-photo">
+								<h1>PHOTOGRAPHY</h1>
+							</a>
+						</div>
+					</div>
+					
+		    </div>
+		</div>
+   </div>
+</div>
+					<div id="art-gallery"></div>
+					 <div id="photo-gallery"></div>
+		    </div>
+		</div>
+	</div>
+</div>
+
+<script type="text/javascript" >
+	 $('.page-art').click(function(){
+        $("#art-gallery").load("artgallery.html"); 
+    });
+
+	  $('.page-photo').click(function(){
+        $("#photo-gallery").load("photogallery.html"); 
+    });
+	 
+
+    $('.fa-times').click(function(){
+     $('#art-gal', '#photo-gal').removeClass("content-top");
+  });
+
+</script>
