--- a/contactme.html
+++ b/contactme.html
@@ -1,12 +1,17 @@
 							<div class="page row content-negative" id="four">
 								<div class="col-xs-12">
-									<div class="row">
+									<div class="row awesome-txt">
 										<div class="col-sm-10 col-sm-offset-1">	
-											<p><a href="" class="fa fa-times fa-2x pull-right"></a></p>
-											<h2></h2>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nisi minima enim perspiciatis expedita beatae earum deleniti aperiam vel. Ex harum quod, dolorem hic illum sit unde fuga iste velit.</p>
-											<p></p>
-											<p></p>
+											<p><a href="" class="fa fa-times fa-2x close"></a></p>
+											<h2>HOW YOU CAN FIND ME</h2>
+											<h3>I am available for freelance jobs. Please contact me and send me your questions and inquiries.</h3>
+											
+												<ul class="contacts list-unstyled">
+													<li><i class="fa fa-facebook-official fa-2x"></i><a href="facebook.com/shibafrommars">Shiba From Mars Illustrations</a></li>
+													<li><i class="fa fa-envelope fa-2x"></i>
+													<a href="">beardi.andrea.maurizio@gmail.com</a></li>
+												</ul>
+											
 									    </div>
 									</div>
 							   </div>
