--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <div class="page content row" id="one">
 		<div class="col-xs-12">
-			<div class="row">
+			<div class="row awesome-txt">
 				<div class="col-sm-10 col-sm-offset-1">
 				    <p><a href="" class="fa fa-times fa-2x close"></a></p>	
 				    <div class="row">
@@ -8,9 +8,8 @@
 				    			<img src="css/img/andrea.jpg" alt="" class="img-responsive img-circle">
 				    	</div>
 				    	<div class="col-xs-12 col-sm-8 col-md-9">
-							<h1>Qualche informazione su di me</h1>
-							<h4>Sono uno studente borsista laureando all’Accademia di Belle Arti di Torino. 
-	        				  Faccio il web designer, l’illustratore sia digitale (Photoshop, Krita) che con tecniche tradizionali (olio, acquarello, acrilico, matita).</h4>
+							<h1 class="text-center">DUE APPUNTI SU DI ME</h1>
+							<h4>Nasco come disegnatore e illustratore digitale, sono solare e vivace, mi piace avere intorno un ambiente positivo, in trasformazione e in pieno movimento.</h4>
 					          <h4>
 					          Come web designer mi sto specializzando nell’apprendere 
 					          linguaggi di programmazione front-end (html, css, js).
@@ -18,7 +17,7 @@
 			    		</div>
 			        </div>   
 					<div class="skill mb20">
-						<h1 class="">My Skylls</h1>
+						<h1 class="">CHE COSA SO FARE MEGLIO</h1>
 						<div class="progress">
 								 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
 						    html/css:90%
@@ -51,7 +50,10 @@
 							  <h3>Shiba From Mars e Hachi</h3>
 							  <div class="pd30">
 							  	<p>
-								<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla explicabo neque accusamus repellendus accusantium optio ad, alias corrupti adipisci velit repudiandae fugiat porro labore autem cupiditate similique architecto eaque, nostrum.</span><span>Ab in, fugiat saepe asperiores magni repellendus omnis mollitia ratione similique aperiam nobis, ullam tempore earum ipsa deserunt reiciendis officia alias, provident quos error quia laboriosam. Expedita animi doloribus architecto!</span>
+								Il progetto Shiba From Mars nasce come gioco, partendo dal mio nickname Hachi (che significa "otto" in giapponese, ma è il nome anche di un cane).</p>
+								<p>
+								La storia parla di una razza evoluta di cani: gli Shiba Inu Sapiens provenienti da Marte,  che osserva Hachi e le sue "visioni" fedelmente disegnate. </p>
+								<p>La galleria di disegni in realtà è il loro archivio segreto...essendo dei cani però sono un po' sbadati e l'archivio è finito online!
 							</p></div>
 						</div>
 						<div class="col-md-3 text-center">
@@ -70,6 +72,7 @@
 							<i class="fa fa-2x  fa-rocket"></i>
 							<h3>let's enjoy this spacetrip together</h3>
 							<div class="pd30"></div>
+							<a href=""><button class="btn-success">Contact Me</button></a>
 						</div>
 					</div>
 				
